logs/django-wechat-api.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_wechat_api-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/enterprise_api'...
Listing './lib/python3.5/site-packages/enterprise_api/migrations'...
Listing './lib/python3.5/site-packages/enterprise_api/utils'...
Compiling './lib/python3.5/site-packages/enterprise_api/utils/Sample.py'...
***   File "./lib/python3.5/site-packages/enterprise_api/utils/Sample.py", line 40
    print "ERR: VerifyURL ret: " + ret
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/enterprise_api/utils/WXBizMsgCrypt.py'...
***   File "./lib/python3.5/site-packages/enterprise_api/utils/WXBizMsgCrypt.py", line 53
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/wechat_api'...
Listing './lib/python3.5/site-packages/wechat_api/migrations'...
Listing './share'...
Listing './share/python-wheels'...
